--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/member/testimonials-2.jpg" class="testimonial-img" alt="">
+              <img src="assets/img/member/member2.jpg" class="testimonial-img" alt="">
               <h3>PolenkXploit</h3>
               <h4>Defacer</h4>
             </div>
@@ -245,11 +245,12 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                Dilukai Oleh Harapan
+Dipatahkan Dengan Kenyataan
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/member/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>ALF_404</h3>
+              <img src="assets/img/member/member3.jpg" class="testimonial-img" alt="">
+              <h3>Mr.N4V3R5</h3>
               <h4>Defacer</h4>
             </div>
           </div><!-- End testimonial item -->
@@ -262,7 +263,7 @@
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <img src="assets/img/member/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>Xrusher Real</h3>
+              <h3>Lapendos</h3>
               <h4>Defacer</h4>
             </div>
           </div><!-- End testimonial item -->
